--- a/Portfolio_Justin/index.html
+++ b/Portfolio_Justin/index.html
@@ -31,23 +31,24 @@
       </div>
 
       <div class="right">
-        <a href="http://github.com" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/JustinKuklik-software" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-github"></i>
           <span>Github</span>
         </a>
 
-        <a href="http://linkedin.com" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.linkedin.com/in/justin-kuklik-446548380/" target="_blank" rel="noopener noreferrer">
           <i class="fa-brands fa-linkedin"></i>
           <span>Linkedin</span>
         </a>
 
-        <a href="mailto:john@example.com">
+        <a href="kuklikjustin00@gmail.com">
           <i class="fa-solid fa-envelope"></i>
           <span>Email</span>
         </a>
       </div>
     </nav>
     <main>
+      <br>
       <!-- SECTION 1: Hero -->
       <section class="hero-section">
         <div class="text">
@@ -58,8 +59,7 @@
         </div>
 
         <div class="headshot">
-          <img src="images/Photo_Justin.JPG" alt="john doe headshot" />
-        </div>
+          <img src="images/Photo_Justin.JPG">
       </section>
       
       <!-- SECTION 2: Skills -->
@@ -181,10 +181,10 @@
                 <a href="images/Certifikate_Udemy.webp" target="_blank">
                   <img
                     src="images/Certifikate_Udemy.webp"
-                    alt="Other Certificate"
+                    alt="Web Development"
                   />
                 </a>
-                <span>Other Certificate</span>
+                <span>Web Development</span>
               </div>
               <div class="certificate-item">
                 <a href="images/Certifikate_Tech.webp" target="_blank">
